# nonebot-plugin-hanime

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  ruff-check.yml
src/nonebot_plugin_hanime/: __init__.py  config.py  download.py  exception.py  hanime.py  utils.py
